[package]
name = "sqldb-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }

# Substrate Dependencies
sqldb-rpc-runtime-api = { version = "0.1.0", path = "./runtime-api" }
sp-api = { version = "4.0.0-dev", path = "../../../thirdparty/substrate/primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../../thirdparty/substrate/primitives/blockchain" }
sp-core = { version = "6.0.0", path = "../../../thirdparty/substrate/primitives/core" }
sp-rpc = { version = "6.0.0", path = "../../../thirdparty/substrate/primitives/rpc" }
sp-runtime = { version = "6.0.0", path = "../../../thirdparty/substrate/primitives/runtime" }

[dev-dependencies]
serde_json = "1"
