[package]
name = "sqldb-rpc-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

sp-api = { version = "4.0.0-dev", default-features = false, path = "../../../../thirdparty/substrate/primitives/api" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../../../thirdparty/substrate/primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../../../thirdparty/substrate/primitives/std" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
]
